syntax = "proto3";

option go_package = "./proto/options";

service OptionsService {
  rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {}

message PingResponse {
  string message = 1;
}